--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -1,14 +1,16 @@
 <html>
 <head>
-	<title>forty fruits project</title>
+	<title>fruits project</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
 
-	<h1>forty fruits project</h1>
-	<p> WEEK 1 </p>
-	<img src="images/water_cone_fruit.jpg"/>
-	<p> lorem ipsum dolor </p>
-
+	<h1>fruits project</h1>
+	<p> week three </p>
+	<img src="images/tall-g.jpg"/>
+	<img src="images/tall-o.jpg"/>
+	<img src="images/wide-p.jpg"/>
+<p> contact me / newcomer.ashley@gmail.com </p>
 	<p> 
 
 </body>
