--- a/unit_4/index.html
+++ b/unit_4/index.html
@@ -1,12 +1,12 @@
 <html>
 <head>
+
 	<title>fruits project</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-
 	<h1>fruits project</h1>
-	<p> week three </p>
+	<p> week four </p>
 	<img src="images/tall-g.jpg"/>
 	<img src="images/tall-o.jpg"/>
 	<img src="images/wide-p.jpg"/>
